# MCP-Win32s

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  build.bat  build.sh  ralph-loop.local.md
.github/workflows/: build-and-test.yml
bridge/: Cargo.toml  OBLIGATIONS-5.0.md  OBLIGATIONS-5.5.md
bridge/clients/: openai_agents_check.py  vscode-copilot.md
bridge/clients/vscode/: mcp.json
bridge/examples/: mock_device.rs
bridge/src/: audit.rs  breaker.rs  capabilities.rs  device.rs  lib.rs  main.rs  ratelimit.rs  server.rs  wire.rs
bridge/src/toolchain/: argv.rs  definition.rs  diagnostics.rs  mod.rs
bridge/tests/: build_tools.rs  encoding.rs  exec_tools.rs  file_tools.rs  integration.rs  memory.rs  props.rs  resilience.rs
bridge/tests/common/: mod.rs
catalog/: MCP-MAPPING.md  README.md  win32-commands.json
docs/: build-toolchain-flags.md  charset-bijection.md  toolchain-definition-guide.md
specs/: base64.allium  catalog.allium  encoding.allium  file-ops.allium  json-parser.allium  mcp-bridge.allium  mcp-protocol.allium  memory-ops.allium  process-ops.allium  serial.allium  toolchains.allium  transport.allium  uart.allium  wire-contract.allium
src/: argv.c  argv.h  audit.c  audit.h  base64.c  base64.h  binfmt.c  binfmt.h  catalog.c  catalog.h  charset_internal.h  charset_tables.c  charset_tables.h  charset_tables_data.c  common.h  encoding.c  encoding.h  exec_ops.c  exec_ops.h  feat.c  feat.h  file_ops.c  file_ops.h  json_parser.c  json_parser.h  mcp-w32s.c  mcp-w32s.manifest  mcp-w32s.rc  mcp-w32s.res  mem_ops.c  mem_ops.h  mini_crt.c  pty_exec.c  pty_exec.h  ready.c  ready.h  serial.c  serial.h  strutil.c  strutil.h  (+8 more)
tests/: OBLIGATIONS-5.1.md  OBLIGATIONS-5.2.md  OBLIGATIONS-5.3.md  OBLIGATIONS-5.4.md  OBLIGATIONS-5.5.md  OBLIGATIONS-6.2.md  OBLIGATIONS-PHASE4.md  argv_echo.c  mem_target.c  mock_transport.c  mock_transport.h  prop.h  test_argv.c  test_audit.c  test_base64.c  test_binfmt.c  test_catalog.c  test_encoding.c  test_exec_ops.c  test_feat.c  test_file_ops.c  test_framework.h  test_json.c  test_mem_ops.c  test_pbt_base64.c  test_pbt_encoding.c  test_pty_exec.c  test_serial.c  test_strutil.c  test_tcp.c  test_toolchain_probe.c  test_transport.c  test_uart.c  uart_sim.h
tests/fixtures/: README.md  make_fixtures
tests/host/: README.md  theft_argv.c  theft_base64.c  theft_catalog.c  theft_encoding.c  theft_json.c  theft_mem.c  theft_strutil.c  theft_uart.c  win32_shim.h  windows.h
tests/smoke/: wire_client.c
toolchains/: mingw-w64-i386.cmake  vc6-nmake.cmake
tools/: gen_charset_tables.py  win32s-import-allowlist.txt
vc6/: mcp-w32s.dsp  mcp-w32s.dsw
