[package]
name = "mcp-w32s-bridge"
version = "0.1.0"
edition = "2021"
description = "MCP bridge for the MCP-Win32s device — exposes a Win32s..Win11 box as MCP tools over stdio."
license = "Unlicense"

# Phase 5.0 (bridge core). Implements specs/mcp-bridge.allium; satisfies
# bridge/OBLIGATIONS-5.0.md. The bridge is an MCP server (stdio, rmcp) and
# a device client (newline-JSON over serial/TCP, the frozen wire protocol).

[[bin]]
name = "mcp-w32s-bridge"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util", "net", "time", "sync"] }
tokio-serial = "5"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 2
